<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"

    android:layout_gravity="fill">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"

        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            >

            <!-- ################################################################################### -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/project_statusname"
                    android:id="@+id/status_name" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/project_status"
                    android:id="@+id/status"
                    android:gravity="end"
                    />

            </LinearLayout>

            <!-- ################################################################################### -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/project_rttname"
                    android:id="@+id/rtt_name" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/project_status"
                    android:id="@+id/rtt"
                    android:gravity="end"
                    />
            </LinearLayout>

            <!-- ################################################################################### -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/project_downloadname"
                    android:id="@+id/download_name" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/project_status"
                    android:id="@+id/download"
                    android:gravity="end" />
            </LinearLayout>

            <!-- ################################################################################### -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/project_uploadname"
                    android:id="@+id/upload_name" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/project_status"
                    android:id="@+id/upload"
                    android:gravity="end"  />
            </LinearLayout>

            <!-- ################################################################################### -->

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="15dp"
                android:paddingBottom="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/results"
                    android:inputType="textMultiLine|textFilter|textNoSuggestions"
                    android:textSize="11sp"
                    android:layout_marginTop="10dp"/>

            </ScrollView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:orientation="horizontal"
            android:gravity="center">

            <LinearLayout
                android:orientation="vertical"
                android:layout_weight="6"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_width="0dp">

                <!--  ======================================================================== -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Download"
                        />

                    <RadioGroup
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/radioGroupDL"
                        android:gravity="end"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/radioButtonDLLow"
                            android:layout_width="55dp"
                            android:layout_height="wrap_content"
                            android:text="@string/name_msetting_low"
                            android:textSize="10sp" />

                        <RadioButton
                            android:id="@+id/radioButtonDLMiddle"
                            android:layout_width="65dp"
                            android:layout_height="wrap_content"
                            android:checked="true"
                            android:text="@string/name_msetting_middle"
                            android:textSize="10sp" />

                        <RadioButton
                            android:id="@+id/radioButtonDLHigh"
                            android:layout_width="65dp"
                            android:layout_height="wrap_content"
                            android:text="@string/name_msetting_high"
                            android:textSize="10sp" />

                        <RadioButton
                            android:id="@+id/radioButtonDLVeryHigh"
                            android:layout_width="75dp"
                            android:layout_height="wrap_content"
                            android:text="@string/name_msetting_veryhigh"
                            android:textSize="10sp" />
                    </RadioGroup>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Upload"
                        />

                    <RadioGroup
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/radioGroupUL"
                        android:gravity="end"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/radioButtonULLow"
                            android:layout_width="55dp"
                            android:layout_height="wrap_content"
                            android:text="@string/name_msetting_low"
                            android:textSize="10sp" />

                        <RadioButton
                            android:id="@+id/radioButtonULMiddle"
                            android:layout_width="65dp"
                            android:layout_height="wrap_content"
                            android:checked="true"
                            android:text="@string/name_msetting_middle"
                            android:textSize="10sp" />

                        <RadioButton
                            android:id="@+id/radioButtonULHigh"
                            android:layout_width="65dp"
                            android:layout_height="wrap_content"
                            android:text="@string/name_msetting_high"
                            android:textSize="10sp" />

                        <RadioButton
                            android:id="@+id/radioButtonULVeryHigh"
                            android:layout_width="75dp"
                            android:layout_height="wrap_content"
                            android:text="@string/name_msetting_veryhigh"
                            android:textSize="10sp" />
                    </RadioGroup>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="IP Version"
                        />

                    <RadioGroup
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/radioGroupIP"
                        android:gravity="end"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/radioButtonIPAuto"
                            android:layout_width="65dp"
                            android:layout_height="wrap_content"
                            android:checked="true"
                            android:text="@string/name_msetting_auto"
                            android:textAlignment="center"
                            android:textSize="10sp" />

                        <RadioButton
                            android:id="@+id/radioButtonIPV4"
                            android:layout_width="65dp"
                            android:layout_height="wrap_content"
                            android:text="@string/name_msetting_ipv4"
                            android:textSize="10sp" />

                        <RadioButton
                            android:id="@+id/radioButtonIPV6"
                            android:layout_width="75dp"
                            android:layout_height="wrap_content"
                            android:text="@string/name_msetting_ipv6"
                            android:textSize="10sp" />

                    </RadioGroup>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Single Stream"
                        />

                    <RadioGroup
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/radioGroupST"
                        android:gravity="end"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/radioButtonSSOff"
                            android:layout_width="65dp"
                            android:layout_height="wrap_content"
                            android:checked="true"
                            android:text="@string/name_msetting_ssoff"
                            android:textSize="10sp" />

                        <RadioButton
                            android:id="@+id/radioButtonSSOn"
                            android:layout_width="75dp"
                            android:layout_height="wrap_content"
                            android:text="@string/name_msetting_sson"
                            android:textSize="10sp" />

                    </RadioGroup>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center">

                    <!-- ##################################################################### -->

                    <Button
                        android:id="@+id/buttonStart"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/name_msetting_all"
                        android:textSize="12sp" />

                    <Button
                        android:id="@+id/buttonRTT"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/name_msetting_rtt"
                        android:textSize="12sp" />

                    <Button
                        android:id="@+id/buttonDownload"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/name_msetting_download"
                        android:textSize="12sp" />

                    <Button
                        android:id="@+id/buttonUpload"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/name_msetting_upload"
                        android:textSize="12sp" />

                    <!-- ##################################################################### -->

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
